fix(code-group): get rid of scrollbar on tabs div

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -237,6 +237,11 @@
   border-bottom: 1px solid var(--border);
   padding: 0 0.5rem;
   overflow-x: auto;
+  scrollbar-width: none;
+}
+
+.code-group-tabs::-webkit-scrollbar {
+  display: none;
 }
 
 .code-group-tab {
